manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-practice
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: cloud-practice
          image: cepgstapacr.azurecr.io/82240941:latest
          command: ['java', '-jar', '/app.jar']
          args: ['--spring.config.location=file:/config/application.yml']
          volumeMounts:
            - mountPath: /mnt/cloud-sample
              name: cloud-practice-volume
              readOnly: false
              subPath: cloud-sample
            - mountPath: /config
              name: application-properties
              readOnly: true

      volumes:
        - name: cloud-practice-volume
          persistentVolumeClaim:
            claimName: cepg-aa-std-pvc
        - name: application-properties
          configMap:
            name: cloud-practice-configmap
            items:
              - key: application.yml
                path: application.yml
            defaultMode: 420
