manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-practice-ingress
spec:
  ingressClassName: ingress-internal
  rules:
    - host: cloud-practice-82240941.cepg-aa.kubepia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: cloud-practice-service
                port:
                  number: 8080
            pathType: Prefix
